--- a/style.css
+++ b/style.css
@@ -283,3 +283,45 @@ footer p {
   padding: 0.75rem 0;
   margin: 0;
 }
+
+/* responsive */
+
+@media screen and (max-width: 800px) {
+  .layout {
+    width: 100%;
+  }
+  .cards {
+    flex-wrap: wrap;
+  }
+  .arrow-left,
+  .arrow-right {
+    display: none;
+  }
+  .maps,
+  .contact-form {
+    display: block;
+    position: static;
+    width: 90%;
+    overflow: hidden;
+    margin: 1rem auto;
+    /* margin: 2rem; */
+  }
+  .contact-form {
+    margin-top: 4rem;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  #nav-items {
+    flex-wrap: wrap;
+  }
+  .navigation {
+    bottom: 2%;
+  }
+  .pricing-heading,
+  .blog-heading,
+  .contact-heading {
+    font-size: 1.25rem;
+    padding-top: 1.5rem;
+  }
+}
